bin/testsuite/tests/compiler/src/errors/compiler3153.swg
#global testerror "Err0340"
func toto(a: s32..., x: ...) {}
